DragDrop and Multiple Upload UI Part Done

--- a/src/assets/i18n/kn.json
+++ b/src/assets/i18n/kn.json
@@ -62,5 +62,7 @@
     "caseStatus":"Case Status",
       "updateRole":"Update Role",
        "update":"Update",
-       "designations":"Designations Name"
+       "designations":"Designations Name",
+"cancel":"Cancel"
+       
 }
