--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -62,6 +62,6 @@
   "caseStatus":"Case Status",
   "updateRole":"Update Role",
   "update":"Update",
-  "designations":"Designations Name",
+  "designations":"Designation Name",
 "cancel":"Cancel"
 }
