File Upload With MetaData Api intergate and working sucessfully

--- a/src/assets/i18n/kn.json
+++ b/src/assets/i18n/kn.json
@@ -63,6 +63,11 @@
       "updateRole":"Update Role",
        "update":"Update",
        "designations":"Designations Name",
-"cancel":"Cancel"
-       
+"cancel":"Cancel",
+       "office":"Office",
+       "author":"Author",
+       "caseType":"Case Type",
+       "firNo":"Fir.No",
+        "subject":"Subject",
+         "letterNo":"Letter No"
 }
