--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -63,5 +63,11 @@
   "updateRole":"Update Role",
   "update":"Update",
   "designations":"Designation Name",
-"cancel":"Cancel"
+"cancel":"Cancel",
+"office":"Office",
+"author":"Author",
+"caseType":"Case Type",
+ "firNo":"Fir.No",
+ "subject":"Subject",
+ "letterNo":"Letter No"
 }
